tests/eval/snapshots/file_tests__eval__err_for_loops.lx@error_in_cond.snap
---
source: tests/eval.rs
description: "for (; a < 4; a = a + 1) {}\n\n"
expression: combined
---
:: Diagnostics ::
error: reference to unbound variable `a`
  --> err_for_loops.lx@error_in_cond:1:8
  |
1 | for (; a < 4; a = a + 1) {}
  |        ^ variable is not bound at this point
